[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/AllerPrison.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Jeu.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Park.gd" type="Script" id=3]
[ext_resource path="res://Scenes/case basique.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Pion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/prison.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/grosse_case.tscn" type="PackedScene" id=7]
[ext_resource path="res://GFX/fond.png" type="Texture" id=8]
[ext_resource path="res://GFX/case_millieu.png" type="Texture" id=9]
[ext_resource path="res://GFX/pion1_normal.png" type="Texture" id=10]
[ext_resource path="res://GFX/pion3_normal.png" type="Texture" id=11]

[node name="jeu" type="Node2D"]
script = ExtResource( 2 )

[node name="fond" type="Sprite" parent="."]
position = Vector2( 1925, 1071 )
scale = Vector2( 2.09844, 2.16852 )
texture = ExtResource( 8 )

[node name="Plateau" type="Node2D" parent="."]
position = Vector2( 1401, 1157 )

[node name="cases" type="Node2D" parent="Plateau"]

[node name="cote_bas" type="Node2D" parent="Plateau/cases"]
position = Vector2( 0, 840 )
__meta__ = {
"_edit_group_": true
}

[node name="Start" parent="Plateau/cases/cote_bas" instance=ExtResource( 7 )]
position = Vector2( 1480, 0 )

[node name="marron_1" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 1273, 0 )

[node name="caisse_1" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 1115, 0 )

[node name="marron_2" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 957, 0 )

[node name="revenu" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 799, 0 )

[node name="gare_1" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 641, 0 )

[node name="cyan_1" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 483, 0 )

[node name="chance_1" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 325, 0 )

[node name="cyan_2" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 167, 0 )

[node name="cyan_3" parent="Plateau/cases/cote_bas" instance=ExtResource( 4 )]
position = Vector2( 9, 0 )

[node name="cote_gauche" type="Node2D" parent="Plateau/cases"]
position = Vector2( -198, -640 )
rotation = 1.5708

[node name="Prison" parent="Plateau/cases/cote_gauche" instance=ExtResource( 6 )]
position = Vector2( 1480, -0.00537109 )
rotation = -1.5708

[node name="marron_1" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 1273, 0 )

[node name="caisse_1" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 1115, 0 )

[node name="marron_2" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 957, 0 )

[node name="revenu" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 799, 0 )

[node name="gare_1" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 641, 0 )

[node name="cyan_1" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 483, 0 )

[node name="chance_1" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 325, 0 )

[node name="cyan_2" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 167, 0 )

[node name="cyan_3" parent="Plateau/cases/cote_gauche" instance=ExtResource( 4 )]
position = Vector2( 9, 0 )

[node name="cote_haut" type="Node2D" parent="Plateau/cases"]
position = Vector2( 1282, -838 )
rotation = 3.14159

[node name="Parking" parent="Plateau/cases/cote_haut" instance=ExtResource( 7 )]
position = Vector2( 1475, -0.996246 )
rotation = -3.14159
script = ExtResource( 3 )

[node name="marron_1" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 1273, 0 )

[node name="caisse_1" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 1115, 0 )

[node name="marron_2" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 957, 0 )

[node name="revenu" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 799, 0 )

[node name="gare_1" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 641, 0 )

[node name="cyan_1" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 483, 0 )

[node name="chance_1" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 325, 0 )

[node name="cyan_2" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 167, 0 )

[node name="cyan_3" parent="Plateau/cases/cote_haut" instance=ExtResource( 4 )]
position = Vector2( 9, 0 )

[node name="cote_droit" type="Node2D" parent="Plateau/cases"]
position = Vector2( 1480, 642 )
rotation = -1.5708

[node name="Goto_prison" parent="Plateau/cases/cote_droit" instance=ExtResource( 7 )]
position = Vector2( 1479, -0.994629 )
rotation = 1.5708
script = ExtResource( 1 )

[node name="marron_1" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 1273, 0 )

[node name="caisse_1" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 1115, 0 )

[node name="marron_2" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 957, 0 )

[node name="revenu" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 799, 0 )

[node name="gare_1" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 641, 0 )

[node name="cyan_1" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 483, 0 )

[node name="chance_1" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 325, 0 )

[node name="cyan_2" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 167, 0 )

[node name="cyan_3" parent="Plateau/cases/cote_droit" instance=ExtResource( 4 )]
position = Vector2( 9, 0 )

[node name="case_millieu" type="Sprite" parent="."]
position = Vector2( 2042, 1158 )
scale = Vector2( 0.9875, 0.988186 )
texture = ExtResource( 9 )

[node name="Pion" parent="." instance=ExtResource( 5 )]
position = Vector2( 2806.89, 1927.87 )

[node name="Sprite2" type="Sprite" parent="Pion"]
position = Vector2( 0, 0.5 )
scale = Vector2( 0.325, 0.325 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Pion2" parent="." instance=ExtResource( 5 )]
position = Vector2( 2952.91, 1934.94 )

[node name="Sprite2" type="Sprite" parent="Pion2"]
position = Vector2( 0.354004, -0.560303 )
scale = Vector2( 0.325, 0.325 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Pion3" parent="." instance=ExtResource( 5 )]
position = Vector2( 2908.5, 1870 )

[node name="Sprite" type="Sprite" parent="Pion3"]
scale = Vector2( 0.325, 0.325 )
texture = ExtResource( 11 )

[node name="Pion4" parent="." instance=ExtResource( 5 )]
position = Vector2( 2911, 1936 )

[node name="Pion5" parent="." instance=ExtResource( 5 )]
position = Vector2( 2908, 1987.5 )

[node name="Pion6" parent="." instance=ExtResource( 5 )]
position = Vector2( 2852.5, 2007 )

[node name="Pion7" parent="." instance=ExtResource( 5 )]
position = Vector2( 2777, 2007 )

[node name="Pion8" parent="." instance=ExtResource( 5 )]
position = Vector2( 2951, 1865 )
[connection signal="signal_resultat_lancer_de" from="." to="Pion" method="_on_jeu_signal_resultat_lancer_de"]
[connection signal="signal_resultat_lancer_de2" from="." to="Pion2" method="_on_jeu_signal_resultat_lancer_de2"]
[connection signal="signal_resultat_lancer_de3" from="." to="Pion3" method="_on_jeu_signal_resultat_lancer_de3"]
[connection signal="signal_resultat_lancer_de4" from="." to="Pion4" method="_on_jeu_signal_resultat_lancer_de4"]
[connection signal="signal_resultat_lancer_de5" from="." to="Pion5" method="_on_jeu_signal_resultat_lancer_de5"]
[connection signal="signal_resultat_lancer_de6" from="." to="Pion6" method="_on_jeu_signal_resultat_lancer_de6"]
[connection signal="signal_resultat_lancer_de7" from="." to="Pion7" method="_on_jeu_signal_resultat_lancer_de7"]
[connection signal="signal_resultat_lancer_de8" from="." to="Pion8" method="_on_jeu_signal_resultat_lancer_de8"]
[connection signal="body_entered" from="Plateau/cases/cote_bas/Start" to="Plateau/cases/cote_bas/Start" method="_on_Start_body_entered"]
[connection signal="body_entered" from="Plateau/cases/cote_haut/Parking" to="Plateau/cases/cote_haut/Parking" method="_on_Parking_body_entered"]
[connection signal="body_entered" from="Plateau/cases/cote_droit/Goto_prison" to="Plateau/cases/cote_droit/Goto_prison" method="_on_Goto_prison_body_entered"]
[connection signal="signal_clic_gauche" from="Pion" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion2" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion3" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion4" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion5" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion6" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion7" to="." method="_on_Pion_signal_clic_gauche"]
[connection signal="signal_clic_gauche" from="Pion8" to="." method="_on_Pion_signal_clic_gauche"]
